# motd-templater

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
sample/: sysinfo.motd-template  warn.sh
src/: handlers.rs  main.rs  template.pest
