[package]
name = "motd-templater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cmd_lib = "1.3.0"
colored = "2.0.3"
lazy_static = "1.4.0"
pest = "2.7.0"
pest_derive = "2.7.0"
procfs = "0.15.1"
rustix = { version = "0.38.3", features = ["process", "system", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
sysinfo = "0.29.4"
toml = "0.7.5"

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
lto = true
